# shades

./: .gitignore  LICENSE  PROJECT_PLAN.md  PROJECT_PLAN_COMPLETED.md  README.md  SETUP_INSTRUCTIONS.md  TESTING.md  build_configurator.bat  build_injector.bat  build_theme_engine.bat  installer.nsi  mingw-w64-toolchain.cmake  test_build_gui.bat  theme.json
.claude/: settings.local.json
Configurator/: Configurator.cpp
Injector/: CMakeLists.txt  Injector.cpp  REBUILD_REQUIRED.txt  SHADES.manifest  SHADES.rc  build.ps1  compile_now.bat
ThemeEngine/: CMakeLists.txt  ThemeEngine.cpp  build_theme.ps1
src/gui/: ButtonBar.cpp  ButtonBar.h  ColorEditor.cpp  ColorEditor.h  ColorPicker.cpp  ColorPicker.h  ColorUtils.cpp  ColorUtils.h  PreviewPanel.cpp  PreviewPanel.h  commands.h  main.cpp  version.h
src/theme_manager/: ThemeManager.cpp  ThemeManager.h
tests/: run_tests.ps1  test_build_verify.ps1  test_cli.ps1  test_file_paths.ps1  test_helpers.ps1  test_installer.ps1  test_json_themes.ps1  test_manifest.ps1
tests/fixtures/: bad_hex.json  invalid_json.json  missing_colors.json  partial_colors.json
themes/: Monokai.json
